# maolan

./: .ccls  .depend  .gitignore  AGENTS.md  BSDmakefile  CLAUDE.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  TASKS_ROADMAP.md  VST3_IMPLEMENTATION_COMPLETE.md  VST3_IMPLEMENTATION_PLAN.md  VST3_IMPLEMENTATION_STATUS.md  VST3_PHASES_2_3_COMPLETE.md  VST3_PHASE_5_COMPLETE.md  VST3_PROGRESS.md  VST3_REMAINING_WORK.md  VST3_STATUS.md  VST3_TESTING_GUIDE.md  boxtype.cpp  build.ps1  build.rs  codecov.yml  config.status  configure  configure.ac  installer.nsi  makeinclude.BSD  makeinclude.Linux  makeinclude.common  makeinclude.configured  makeinclude.configured.in  maolan.cpp  menubar.cpp
.beads/: issues.jsonl  metadata.json
.cargo/: config.toml
.github/workflows/: project-in-progress.yml  release.yml  rust.yml
assets/desktop/: maolan-linux.desktop
autom4te.cache/: output.0  requests  traces.0
desktop/: maolan-bsd.desktop  maolan-linux.desktop
docs/: FEATURES.md  HISTORY_AUDIT.md  OPERATIONS.md  OSC.md  PLUGIN_ROUTING.md  SHORTCUTS.md  commands.txt
engine/: Cargo.toml  README.md
engine/examples/: lv2_plugins.rs
engine/oss/: Cargo.toml
engine/oss/src/: lib.rs
engine/src/: alsa_worker.rs  channels.rs  client.rs  clip.rs  coreaudio_worker.rs  engine.rs  history.rs  hw_worker.rs  kind.rs  lib.rs  lv2.rs  main.rs  message.rs  mutex.rs  osc.rs  oss_worker.rs  routing.rs  rubberband.rs  sndio_worker.rs  state.rs  track.rs  vst3.rs  vst3_old.rs  wasapi_worker.rs  worker.rs
engine/src/audio/: clip.rs  io.rs  mod.rs  track.rs
engine/src/hw/: alsa.rs  common.rs  config.rs  convert_policy.rs  error_fmt.rs  jack.rs  latency.rs  midi.rs  midi_hub.rs  mod.rs  netbsd_audio.rs  options.rs  oss.rs  ports.rs  prefill.rs  sndio.rs  traits.rs  wasapi.rs
engine/src/hw/coreaudio/: convert.rs  device.rs  driver.rs  error_fmt.rs  ioproc.rs  latency.rs  midi_hub.rs  mod.rs  sync.rs
engine/src/hw/oss/: audio_core.rs  channel.rs  consts.rs  convert.rs  driver.rs  io_util.rs  ioctl.rs  mod.rs  sync.rs
engine/src/midi/: clip.rs  io.rs  mod.rs  track.rs
engine/src/plugins/: clap.rs  lv2.rs  mod.rs  paths.rs
engine/src/plugins/vst3/: editor_win32.rs  host.rs  interfaces.rs  midi.rs  mod.rs  port.rs  processor.rs  state.rs
engine/src/vst3/: interfaces.rs  mod.rs  processor.rs  state.rs
engine/src/workers/: alsa_worker.rs  coreaudio_worker.rs  hw_worker.rs  mod.rs  netbsd_audio_worker.rs  oss_worker.rs  sndio_worker.rs  wasapi_worker.rs  worker.rs
engine/tests/: coreaudio_integration.rs  lv2_load_smoke.rs  lv2_runtime_smoke.rs
generate/: Cargo.toml  README.md  build.rs
generate/scripts/: heartcodec_detokenize.py
generate/src/: heartmula_runtime.rs  lib.rs  main.rs
generate/src/heartcodec/: conv.rs  loader.rs  mod.rs
maolan/: app.hpp  config.h  config.h.in  state.hpp  ui.hpp
maolan-burn/: Cargo.toml
maolan-burn/src/: lib.rs  main.rs
maolan/glfw/: ui.hpp
maolan/ui/: app.hpp  menu.hpp  playback.hpp  state.hpp  track.hpp  tracks.hpp  ui.hpp
maolan/ui/glfw/: ui.hpp
maolan/ui/widgets/: clip.hpp  draglimit.hpp  grid.hpp  hdraglimit.hpp  playbutton.hpp  playhead.hpp  stopbutton.hpp  timetrack.hpp
memory/: MEMORY.md
plugin-host/: Cargo.toml  README.md
plugin-host/src/: blocklist.rs  clap.rs  clap_engine.rs  gui_win32.rs  gui_x11.rs  host.rs  lib.rs  lv2.rs  main.rs  paths.rs  scan.rs  util.rs  vst3_lv2_host.rs
plugin-host/src/vst3/: host.rs  interfaces.rs  midi.rs  mod.rs  port.rs  processor.rs  state.rs
plugin-host/tests/: test_passthrough.c  windows_clap_load.rs
scripts/: audit-history-coverage.sh  build-deb.sh  build-debian.sh  build-fedora.sh  build-pkg.sh  build-rpm.sh  build-ubuntu.sh  build.ps1  heartmula_debug_first_frame.py  heartmula_generate_frames.py  installer.nsi  package-release.sh  setup-nfs-mount.sh  test-clap-plugins.sh
shell/: .cshrc  provision.sh
src/: add_track.rs  app.cpp  apply_template.rs  audio_defaults.rs  cli_export.rs  cli_support.rs  clip_rename.rs  clips_pane.rs  config.rs  consts.rs  desktop.cpp  gui.rs  hw.rs  lib.rs  logging.rs  main.rs  maolan  maolan.cpp  maolanGui  maolanGui.cpp  maolanGui.debug  maolanGui.full  menu.cpp  menu.rs  message.rs  midi.rs  modulator_target_dialog.rs  modulators_pane.rs  platform_caps.rs  playback.cpp  plugin_blocklist.rs  session_restore.rs  shortcuts_pane.rs  state.cpp  template_save.rs  toolbar.rs  track.cpp  track_group.rs  track_marker.rs  track_rename.rs  (+4 more)
src/clap_ui/: mod.rs
src/cli/: config.rs  export.rs  mod.rs  plugin_support.rs  support.rs
src/connections/: canvas_host.rs  colors.rs  jack.rs  mod.rs  plugins.rs  port_kind.rs  ports.rs  selection.rs  tracks.rs
src/glfw/: ui.cpp
src/gui/: mod.rs  platform.rs  session.rs  subscriptions.rs  update.rs  view.rs
src/icon/: metronome.rs  mod.rs
src/plugin_host/: mod.rs  scanner.rs  watchdog.rs
src/plugins/: mod.rs  win32.rs  x11.rs
src/session_view/: mod.rs  rename.rs
src/state/: clip.rs  connection.rs  mod.rs  platform.rs  platform_freebsd.rs  platform_linux.rs  platform_openbsd.rs  session.rs  track.rs
src/style/: arm.rs  disk.rs  input.rs  mixer.rs  mod.rs  mute.rs  phase_invert.rs  setup.rs  solo.rs
src/track/: group.rs  group_template_save.rs  marker.rs  mod.rs  rename.rs  template_save.rs
src/vst3_ui/: mod.rs  x11.rs
src/widget/: clip.rs  controller.rs  curve.rs  horizontal_scrollbar.rs  horizontal_slider.rs  midi_edit.rs  mod.rs  note_area.rs  numeric_input.rs  piano.rs  piano_roll.rs  pitch_correction.rs  slider.rs  vertical_scrollbar.rs
src/widgets/: clip.cpp  draglimit.cpp  grid.cpp  hdraglimit.cpp  playbutton.cpp  playhead.cpp  stopbutton.cpp  timetrack.cpp
src/workspace/: add_track.rs  cursor_override.rs  editor.rs  meta.rs  mixer.rs  mod.rs  open.rs  piano_roll.rs  ruler.rs  save.rs  tempo.rs  tracks.rs
widgets/: Cargo.toml  README.md
widgets/src/: arch_slider.rs  clip.rs  consts.rs  controller.rs  horizontal_scrollbar.rs  horizontal_slider.rs  lib.rs  meters.rs  midi.rs  note_area.rs  numeric_input.rs  piano.rs  piano_roll.rs  slider.rs  ticks.rs  vertical_scrollbar.rs
(+37 files in other folders)
