AC_INIT(src/maolan.cpp)

MAOLAN_MAJOR_VERSION=0
AC_SUBST(MAOLAN_MAJOR_VERSION)

MAOLAN_MINOR_VERSION=0
AC_SUBST(MAOLAN_MINOR_VERSION)

MAOLAN_PATCH_VERSION=1
AC_SUBST(MAOLAN_PATCH_VERSION)

AC_LANG([C++])

CC="${CC:=}"
AC_SUBST(CC)

CXX="${CXX:=}"
AC_SUBST(CXX)

CFLAGS="${CFLAGS:=}"
AC_SUBST(CFLAGS)

CPPFLAGS="${CPPFLAGS:=}"
AC_SUBST(CPPFLAGS)

CXXFLAGS="${CXXFLAGS:=}"
AC_SUBST(CXXFLAGS)

LDFLAGS="${LDFLAGS:=}"
AC_SUBST(LDFLAGS)

AC_PROG_CC
AC_PROG_CXX


AC_OUTPUT(makeinclude.configured)
AC_OUTPUT(maolan/config.h)
