[package]
name = "maolan-engine"
version = "0.0.1"
edition = "2024"

[dependencies]
num_cpus = "1.17.0"
wavers = "1.5.1"
tokio = { version = "1.49.0", features = ["full"] }
tracing-subscriber = "0.3.22"
tracing = "0.1.44"
byteorder = "1.5.0"
midly = "0.5.3"

[target.'cfg(target_os = "linux")'.dependencies]
alsa = { version = "0.9.1" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.1", features = ["ioctl"] }
jack = "0.13.0"
lilv = "0.2.4"
lv2_raw = "0.2.0"

[target.'cfg(target_os = "windows")'.dependencies]
cpal = "0.15.3"
midir = "0.10.1"

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2.16"
coremidi = "0.7.0"
