[package]
name = "maolan-engine"
version = "0.0.3"
edition = "2024"
description = "Audio engine for the Maolan DAW with audio/MIDI tracks, routing, export, and CLAP/VST3/LV2 hosting"
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/maolan/maolan"
homepage = "https://github.com/maolan/maolan"
documentation = "https://docs.rs/maolan-engine"
keywords = ["audio", "midi", "vst3", "clap", "lv2"]
categories = ["multimedia::audio"]

[dependencies]
num_cpus = "1.17.0"
wavers = "1.5.1"
tokio = { version = "1.50.0", features = ["full"] }
tracing-subscriber = "0.3.22"
tracing = "0.1.44"
byteorder = "1.5.0"
midly = "0.5.3"
vst3 = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = "0.8.9"

[target.'cfg(target_os = "linux")'.dependencies]
alsa = { version = "0.9.1" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.2", features = ["ioctl"] }
jack = "0.13.5"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
lilv = "0.2.4"
lv2_raw = "0.2.0"

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2.17"
coremidi = "0.7.0"
