[package]
name = "maolan-generate"
default-run = "maolan-generate"
version = "0.0.1"
edition = "2024"
license = "BSD-2-Clause"
publish = false
build = "build.rs"

[features]
default = []
cuda = ["burn/cuda"]

[dependencies]
anyhow = "1.0.100"
burn = { version = "0.21.0-pre.1", default-features = false, features = ["std", "ndarray", "wgpu"] }
burn-ndarray = { version = "0.21.0-pre.1", default-features = false, features = ["multi-threads", "std"] }
burn-store = { version = "0.21.0-pre.1", default-features = false, features = ["burnpack", "std", "memmap"] }
half = "2.7.1"
huggingface-hub = { package = "hf-hub", version = "0.5.0", default-features = false, features = ["ureq"] }
hound = "3.5.1"
rand = { version = "0.9.2", features = ["small_rng"] }
rayon = "1.11.0"
safetensors = "0.4.5"
sentencepiece = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokenizers = "0.20.1"

[build-dependencies]
anyhow = "1.0.100"
