[package]
name = "maolan-burn"
version = "0.1.0"
edition = "2024"
license = "BSD-2-Clause"
publish = false
build = "build.rs"

[features]
default = ["backend-vulkan"]
backend-ndarray = ["burn/ndarray"]
backend-vulkan = ["burn/wgpu"]
backend-cuda = ["burn/cuda"]

[dependencies]
anyhow = "1.0.100"
burn = { version = "0.21.0-pre.1", default-features = false, features = ["std"] }
burn-store = { version = "0.21.0-pre.1", default-features = false, features = ["burnpack", "std"] }
half = "2.7.1"
hound = "3.5.1"
rand = { version = "0.9.2", features = ["small_rng"] }
sentencepiece = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[build-dependencies]
anyhow = "1.0.100"
